# simple_petsc_example

./: .gitignore  CMakeLists.txt  README.md  environment.yml
cmake/: FindPETSc.cmake
src/c++/: CMakeLists.txt  _simple_petsc_example.cpp  solver.cpp  solver.hpp
src/python/: main.py
